[DDW-861] Review: Fix x alignment

--- a/source/renderer/app/components/wallet/tokens/wallet-tokens-search/WalletTokensSearch.scss
+++ b/source/renderer/app/components/wallet/tokens/wallet-tokens-search/WalletTokensSearch.scss
@@ -28,7 +28,7 @@
     height: 28px;
     position: absolute;
     right: 12px;
-    top: 11px;
+    top: 12px;
     width: 28px;
     z-index: 1;
 
